--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
